Fix remaining stubbing issues